2008-12-10    <dancy@CANDY2K>
4.5.1b10
	
	* BUGFIX: sunrpc-service.cl: rpc-get-message: Log unexpected
	errors that may occur during receive-from to aid in debugging.
	Also, ignore WSAEWOULDBLOCK errors that might occur during
	receive-from.

2008-06-05    <dancy@CANDY2K>
4.5.1b9	
	* nfs.cl: Rearranged with-nfs-err-handler.  It was sometimes
	generating backtraces under circumstances that it shouldn't.
	Switched to using (top-level.debug:zoom) as well.

	* unicode-file.cl: Added checks to see if allocate_pseudofd is
	returning a negative result.

2008-04-28    <dancy@CANDY2K>
4.5.1b8
	* export.cl: Added (eval-when (compile) (declaim (optimize (speed 3)))) 
	to top of file.  

	Added (declare (optimize speed (safety 0) (debug 0))) to some
	heavily-used functions.  

	export-user-write-access-allowed-p/export-user-read-access-allowed-p:
	Tweaked a bit so that 'uid' can be nil (meaning the client did not
	provide uid information).  In this case, the functions will only
	return true if 'everyone' is listed in the appropriate access
	list.

	* ipaddr.cl: Rewrote addr-in-network-p using 'll' code so it's
	about 5 times faster.  However, the overall impact on the program
	is minor.

	* nfs.cl: nfs-okay-to-write/nfs-okay-to-read: Tweaked to allow for
	RPC calls made with auth-null authentication.  In this case, we
	pass 'nil' as the uid to export-user-{write,read}-access-allowed-p.  

2008-01-26    <dancy@CANDY2K>
4.5.1b7
	* ENHANCEMENT: Symbolic link support added.

	* nfs-common.cl: map-errno-to-nfs-error: Map *einval* to
	*nfserr-inval*.

2008-01-04    <dancy@DANCYSOFT>
4.5.1b6
        * nfs-log.cl:  Use utf8 external format for logfile.

2008-01-04  root  <root@gills.dancysoft.com>

	* hammernfs.c: Added TCP support.

2008-01-04    <dancy@DANCYSOFT>

	ENHANCEMENT: Changes to allow for international filenames by:
	1) Using utf8 for sending/receiving filenames to/from nfs clients.
	2) Using new functions for accessing files in Windows using 16-bit
	charcaters.
