@@ -1,3 +1,10 @@
+2008-12-11    <layer@HOBART128>
+
+	* Makefile: parameterize "Program Files" directory (for
+          building 64-bit Windows)
+	* main.cl: require :trace when telnet server is compiled in
+	* configure/Makefile: quote ALLEGRO
+
 2008-12-10    <dancy@CANDY2K>
 4.5.1b10
 	
